Fixing responsiveness on mobiles

--- a/src/components/AdditionalInfo/AdditionalInfo.css
+++ b/src/components/AdditionalInfo/AdditionalInfo.css
@@ -56,7 +56,7 @@ p {
   text-align: center;
 }
 
-@media (max-width: 641px) {
+@media (max-width: 1025px) {
   .additionalInfo {
     display: flex;
     background-color: rgba(255, 255, 255, 0.5);
