--- a/src/components/WeatherBox/WeatherBox.css
+++ b/src/components/WeatherBox/WeatherBox.css
@@ -31,7 +31,7 @@
   align-self: flex-end;
 }
 
-@media (max-width: 641px) {
+@media (max-width: 1025px) {
   .locationDate {
     display: flex;
     flex-direction: row;
